--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.6.1"
+    "@astrojs/mdx": "^4.2.3",
+    "@astrojs/svelte": "^7.0.9",
+    "astro": "^5.6.1",
+    "svelte": "^5.25.12",
+    "typescript": "^5.8.3"
   }
 }
