--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/mdx": "^4.2.3",
     "@astrojs/svelte": "^7.0.9",
     "astro": "^5.6.1",
+    "jquery": "^3.7.1",
     "svelte": "^5.25.12",
     "typescript": "^5.8.3"
   },
